[FIXED] text overflow in messages and made font size in mobile menu larger

--- a/frontEnd/src/components/menu/menu.module.css
+++ b/frontEnd/src/components/menu/menu.module.css
@@ -50,7 +50,7 @@
 }
 
 .mobileMenuOptionsContainer p{
-    font-size: 17px;
+    font-size: 25px;
     font-weight: 550;
     color: white;
 }
